--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,13 @@ h1 {
     text-align: center;
 }
 
+#takename{
+    margin-top:10px;
+    text-align:center;
+    font-wieght:bolder;
+    font-size:2rem;
+}
+
 @media(max-width:600px) {
     td {
         padding: 0rem;
