--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,8 @@
 td {
     border: 2px solid black;
     /*background-color: burlywood; */
-    background-image: linear-gradient(white, yellow);
+    /*background-image: linear-gradient(white, yellow);*/
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
     padding: 1rem;
     border-radius: 20px;
 }
