--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,8 @@
     font-family: 'Ubuntu', sans-serif;
 }
 body {
-    background : url(../books-690219.jpg);
+    background : url(../code-1076536_1920.jpg);
+    background-position : center center ;
 }
 
 td {
