--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 * {
     margin: auto;
     font-family: 'Ubuntu', sans-serif;
+    color : white ;
 }
 body {
     background : url(../code-1076536_1920.jpg);
@@ -13,6 +14,7 @@ td {
     /*background-image: linear-gradient(white, yellow);*/
     background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
     padding: 1rem;
+    color : black !important ;
     border-radius: 20px;
 }
 
