--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 * {
     margin: auto;
     font-family: 'Ubuntu', sans-serif;
-    color : white ;
+    /*color : black ;*/
 }
 body {
     background : url(../code-1076536_1920.jpg);
@@ -14,12 +14,13 @@ td {
     /*background-image: linear-gradient(white, yellow);*/
     background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
     padding: 1rem;
-    color : black !important ;
+    /*color : black !important ;*/
     border-radius: 20px;
 }
 
 h1 {
     text-align: center;
+    color : white;
 }
 
 #takename{
@@ -27,6 +28,7 @@ h1 {
           text-align : center;
           font-wieght : bolder;
           font-size : 2rem;
+    color : white
 }
 
 @media(max-width:600px) {
