--- a/css/index.css
+++ b/css/index.css
@@ -1,34 +1,36 @@
 * {
     margin: auto;
     font-family: 'Ubuntu', sans-serif;
-    /*color : black ;*/
 }
+
 body {
-    background : url(../code-1076536_1920.jpg);
-    background-position : center center ;
+    /* background-image: linear-gradient( #819ece, rgb(163, 146, 224), #7d9ac5); */
+    background: rgba(0, 0, 0, 0.5) url('../bg1.jpg');
+    background-size: cover;
+    background-blend-mode: darken;
 }
 
 td {
-    border: 2px solid black;
-    /*background-color: burlywood; */
-    /*background-image: linear-gradient(white, yellow);*/
-    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
-    padding: 1rem;
-    /*color : black !important ;*/
-    border-radius: 20px;
+    background-color: #00000073;
+    background-clip: border-box;
+    border: 0 solid #edf2f9;
+    border-radius: .375rem;
+    color: white;
+    padding: 5px;
 }
 
-h1 {
+h2 {
     text-align: center;
-    color : white;
+    margin-bottom: 10px;
+    color: white;
 }
 
-#takename{
-          margin-top : 10px;
-          text-align : center;
-          font-wieght : bolder;
-          font-size : 2rem;
-    color : white
+#takename {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 1rem;
+    margin-bottom: 10px;
+    color: white;
 }
 
 @media(max-width:600px) {
@@ -36,4 +38,12 @@ h1 {
         padding: 0rem;
         border-radius: 10px;
     }
+}
+
+#upd {
+    color: white;
+}
+
+th {
+    color: white;
 }
