--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@ body {
     background: rgba(0, 0, 0, 0.5) url('../bg1.jpg');
     background-size: cover;
     background-blend-mode: darken;
+    background-repeat : repeat-y ;
 }
 
 td {
