--- a/css/index.css
+++ b/css/index.css
@@ -34,6 +34,9 @@ h2 {
     color: white;
 }
 
+.alert{position:relative;padding:.75rem 1.25rem;margin-bottom:1rem;border:1px solid transparent;border-radius:.25rem}
+.alert-success{color:#155724;background-color:#d4edda;border-color:#c3e6cb}.alert-success hr{border-top-color:#b1dfbb}
+
 @media(max-width:600px) {
     td {
         padding: 0rem;
